update resume with new website

--- a/Khalil_resume.tex
+++ b/Khalil_resume.tex
@@ -47,7 +47,7 @@
 \cvdate{} % Date of birth
 \cvaddress{Montr\'{e}al Qu\'{e}bec, Canada} % Short address/location, use \newline if more than 1 line is required
 \cvnumberphone{+1 (514) 572-7367} % Phone number
-\cvsite{sol.research.mcgill.ca} % Personal website
+\cvsite{khbalhandawi.github.io} % Personal website
 \cvmail{khalil.alhandawi@mail.mcgill.ca} % Email address
 \cvgithub{github.com/khbalhandawi} % GitHub
 \cvlinkedin{linkedin.com/in/khbalhandawi} % LinkedIn
