Add GE cover letter

--- a/Cover_letters/GE/Cover_letter.tex
+++ b/Cover_letters/GE/Cover_letter.tex
@@ -46,7 +46,7 @@
 \cvdate{} % Date of birth
 \cvaddress{Montr\'{e}al Qu\'{e}bec, Canada} % Short address/location, use \newline if more than 1 line is required
 \cvnumberphone{+1 (514) 572-7367} % Phone number
-\cvsite{khbalhandawi.github.io} % Personal website
+\cvsite{sol.research.mcgill.ca} % Personal website
 \cvmail{khalil.alhandawi@mail.mcgill.ca} % Email address
 \cvgithub{github.com/khbalhandawi} % GitHub
 \cvlinkedin{linkedin.com/in/khbalhandawi} % LinkedIn
@@ -83,7 +83,7 @@
 			\ifthenelse{\equal{\cvaddress}{}}{}{\raisebox{-1pt}{\faHome} & \cvaddress \\} % Address
 			\ifthenelse{\equal{\cvaddress}{}}{}{\raisebox{-1pt}{\faPhone} & \cvnumberphone \\} % Phone number
 			\ifthenelse{\equal{\cvmail}{}}{}{\raisebox{0pt}{\small\faEnvelope} & \href{mailto:\cvmail}{\cvmail} \\} % Email address
-			\ifthenelse{\equal{\cvsite}{}}{}{\raisebox{-1pt}{\faGlobe} & \href{https://\cvsite}{\cvsite} \\} % GitHub profile
+			\ifthenelse{\equal{\cvgithub}{}}{}{\raisebox{-1pt}{\faGithub} & \href{https://\cvgithub}{\cvgithub} \\} % GitHub profile
 			\ifthenelse{\equal{\cvlinkedin}{}}{}{\raisebox{-1pt}{\faLinkedinSquare} & \href{https://\cvlinkedin}{\cvlinkedin} \\} % LinkedIn profile
 			% See fontawesome.pdf in the fonts folder for all icons you can use
 		\end{supertabular}
@@ -98,28 +98,29 @@
 %	ADDRESS
 %----------------------------------------------------------------------------------------
 \today\\[6pt]
-GE Corporate, Corporate Global Research\\
-Niskayun, United States Of America\\
-NY 12309-1027\\[6pt] \medskip
+Andrea Malloni\\
+HR manager, Human Resources\\
+\textit{NVIDIA}\\
+Toronto, Ontario, Canada\\[6pt] \medskip
 %----------------------------------------------------------------------------------------
 %	MAIN BODY
 %----------------------------------------------------------------------------------------
-Dear hiring manager,
+Dear Ms. Malloni,
 
 \medskip % Extra whitespace before the next section 
-I would like to be upfront about my nationality when applying for the research engineer position at GE corporate. Unfortunately, I am a Syrian national which I understand is on the list of embargoed countries. Nonetheless, I felt compelled to apply for this position because I am highly educated and experienced and I have a strong passion for research. The job description is very well-aligned with my PhD dissertation about uncertainty modeling in engineering design. I have worked a lot with DOE/DACE, metamodeling, and machine learning during my PhD and postdoctoral research. I also would like to point out that I am a Canadian Permanent Resident and should become a citizen next year. 
+I already applied to another similar posting on the NVIDIA website so I apologize if this is considered a duplicate application. Its just that I feel very passionate about conducting research at NVIDIA and would love the chance to bring my ideas and expertise to your team.
 
 \medskip % Extra whitespace before the next section
 
-I believe that my strong mathematical and simulation skills, combined with my love for mentoring and guiding others will add a lot of value to the research done at GE. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. I was so excited to learn about the opportunity to work in a multidisciplinary team at GE and learn from a lot of individuals with different backgrounds.
+I believe that my strong mathematical and simulation skills, combined with my love for mentoring and guiding others will add a lot of value to the research done at NVIDIA. Nothing gives me a greater sense of joy than hearing about the accomplishments of my students. I was so excited to learn about the wide array of applications for AI and GPU computing when I watched several GTC talks and chatted with experts. The applications vary all the way from space exploration to micro-biology and medical imaging. The multidisciplinary nature of the work done at NVIDIA is so inspirational and aligns well with my career goals.
 
 \medskip % Extra whitespace before the next section
 
-Although I am happy with my current job working as a researcher at McGill and coming up with my own research ideas, guiding and supervising students to make their ideas a reality, I wanted to explore something different that I could only find at GE. That is the opportunity to work with a multidisciplinary team and bring people's ideas together. My lab specializes in multidisciplinary design optimization which is developed for coordinating the engineering activities of multidisciplinary teams and organizations.
+Although I am happy with my current job working as a researcher at McGill and coming up with my own research ideas, guiding and supervising students to make their ideas a reality, I wanted to explore something different that I could only find at NVIDIA. That is the opportunity to work on something cool and fun that can benefit all of human-kind such as video games, immersive virtual worlds, and even space exploration; not just topics related to engineering. 
 
 \medskip % Extra whitespace before the next section
 
-I hope you enjoy going through my profile and my projects on my website (\href{https://khbalhandawi.github.io/projects/}{https://khbalhandawi.github.io/projects/}) and I hope we can discuss all of this. Needless to say, I am a huge fan of the technologies and products at GE. I feel that this passion will push me far beyond my abilities.
+I hope you enjoy going through my profile and my projects on GitHub (linked in my CV) and I hope we can discuss all of this. Needless to say, I am a huge fan of the technologies and products enabled by NVIDIA's GPUs! I feel that this passion will push me far beyond my abilities. Ever since I was a kid, working with computer technology leaders is all I ever wanted to do and seeing this opportunity, I think it could actually happen!
 
 % I realize that being a research scientist entails three things: 1) Mentorship and supervision acumen 2) Strong research skills 3) Good communication skills to present key takeaways from cutting-edge research.
 
