Add Siemens cover letter

--- a/Cover_letters/structure.tex
+++ b/Cover_letters/structure.tex
@@ -87,7 +87,7 @@ SmallCapsFont=*-SC.ttf
 \definecolor{text}{HTML}{2b2b2b} % Main document font colour, off-black
 \definecolor{headings}{HTML}{701112} % Dark red colour for headings
 \definecolor{shade}{HTML}{F5DD9D} % Peach colour for the contact information box
-\definecolor{linkcolor}{HTML}{0000ff} % 25% desaturated headings colour for links
+\definecolor{linkcolor}{HTML}{0000FF} % 25% desaturated headings colour for links
 \definecolor{python}{HTML}{0E5484}
 \definecolor{maingray}{HTML}{B9B9B9}
 \definecolor{proglang}{HTML}{f2f2f2}
