Add Ahmed as a reference

--- a/Khalil_resume.tex
+++ b/Khalil_resume.tex
@@ -80,7 +80,7 @@
 %	 ABOUT ME
 %----------------------------------------------------------------------------------------
 
-\aboutme{I am a researcher with 4 years of experience in simulation-based design, optimization, and high-performance computing. I enjoy working with large multidisciplinary teams and projects and love the prospect of mentoring and supervising other aspiring engineers.} % To have no About Me section, just remove all the text and leave \aboutme{}
+\aboutme{I am a researcher with 6 years of experience in simulation-based design, optimization, and high-performance computing. I enjoy working with large multidisciplinary teams and projects and love the prospect of mentoring and supervising other aspiring engineers.} % To have no About Me section, just remove all the text and leave \aboutme{}
 
 %----------------------------------------------------------------------------------------
 %	 EDUCATION
@@ -151,34 +151,46 @@
 % 	 REFERENCES
 %----------------------------------------------------------------------------------------
 
-% \references{
-% 	\begin{supertabular}{rl} % Start a table with two columns, the table will ensure everything is aligned
+\references{
+	\begin{supertabular}{rl} % Start a table with two columns, the table will ensure everything is aligned
 
-% 		%------------------------------------------------
+		%------------------------------------------------
 
-% 		\tableentry{}{\textbf{Prof. Michael Kokkolaras}}{spaceafter}
-% 		\tableentry{Position}{Associate Professor}{}
-% 		\tableentry{Employer}{\href{https://www.mcgill.ca/mecheng/}{Department of Mechanical}}{}
-% 		\tableentry{}{\href{https://www.mcgill.ca/}{Engineering, \textit{McGill Univeristy}}}{spaceafter}
-% 		\tableentry{Email}{\href{mailto:michael.kokkolaras@mcgill.ca}{michael.kokkolaras@mcgill.ca}}{}
+		\tableentry{}{\textbf{Dr. Ahmed Bayoumy}}{spaceafter}
+		\tableentry{Position}{Advanced Development Engineer}{}
+		\tableentry{Employer}{\href{https://www.sw.siemens.com/en-US/}{Siemens Digital Industries}}{}
+		\tableentry{Email}{\href{mailto:ahmed.bayoumy@siemens.com}{ahmed.bayoumy@siemens.com}}{}
 
-% 		% %------------------------------------------------
+		% %------------------------------------------------
 
-% 		% \tableentry{}{}{} % Creates some additional whitespace between the references
+		% \tableentry{}{}{} % Creates some additional whitespace between the references
 
-% 		% %------------------------------------------------
+		% %------------------------------------------------
 
-% 		% \tableentry{}{\textbf{Prof. Nader Vahdati}}{spaceafter}
-% 		% \tableentry{Position}{Associate Professor}{}
-% 		% \tableentry{Employer}{\href{}{Department of Mechanical}}{}
-% 		% \tableentry{}{\href{https://www.ku.ac.ae/}{Engineering, \textit{Khalifa Univeristy}}}{spaceafter}
-% 		% \tableentry{Email}{\href{mailto:nader.vahdati@ku.ac.ae}{nader.vahdati@ku.ac.ae}}{}
+		% \tableentry{}{\textbf{Prof. Michael Kokkolaras}}{spaceafter}
+		% \tableentry{Position}{Associate Professor}{}
+		% \tableentry{Employer}{\href{https://www.mcgill.ca/mecheng/}{Department of Mechanical}}{}
+		% \tableentry{}{\href{https://www.mcgill.ca/}{Engineering, \textit{McGill Univeristy}}}{spaceafter}
+		% \tableentry{Email}{\href{mailto:michael.kokkolaras@mcgill.ca}{michael.kokkolaras@mcgill.ca}}{}
 
-% 		%------------------------------------------------
+		% %------------------------------------------------
 
-% 	\end{supertabular}
-% }
-\references{}
+		% \tableentry{}{}{} % Creates some additional whitespace between the references
+
+		% %------------------------------------------------
+
+		% \tableentry{}{\textbf{Prof. Nader Vahdati}}{spaceafter}
+		% \tableentry{Position}{Associate Professor}{}
+		% \tableentry{Employer}{\href{}{Department of Mechanical}}{}
+		% \tableentry{}{\href{https://www.ku.ac.ae/}{Engineering, \textit{Khalifa Univeristy}}}{spaceafter}
+		% \tableentry{Email}{\href{mailto:nader.vahdati@ku.ac.ae}{nader.vahdati@ku.ac.ae}}{}
+
+		%------------------------------------------------
+
+	\end{supertabular}
+}
+
+% \references{}
 
 %----------------------------------------------------------------------------------------
 %	 SKILLS
@@ -203,19 +215,16 @@
 
 		%------------------------------------------------
 		\tableentry{\LARGE\faBullseye}{\large\textsc{Systems optimization}}{spaceafter}
-		\tableentry{}{Multi-disciplinary optimization}{}
 		\tableentry{}{Gradient-based optimization}{}
 		\tableentry{}{Stochastic optimization}{}
 		\tableentry{}{Derivative-free optimization}{spaceafter}
 		\tableentry{\LARGE\faCodepen}{\large\textsc{Numerical simulation}}{spaceafter}
 		\tableentry{}{Finite element modeling}{}
-		\tableentry{}{Agent-based modeling}{}
 		\tableentry{}{Surrogate modeling}{spaceafter}
 		\tableentry{\Large\faConnectdevelop}{\large\textsc{Machine learning}}{spaceafter}
 		\tableentry{}{Hyperparameter optimization}{}
 		\tableentry{}{Feature engineering}{}
 		\tableentry{}{Classification and regression}{}
-		\tableentry{}{Sequence completion models (RNNs)}{spaceafter}
 		\tableentry{\Large\faBarChart}{\large\textsc{Uncertainty quantification}}{spaceafter}
 		\tableentry{}{Reliability-based design}{}
 		\tableentry{}{Monte Carlo simulation}{}
@@ -228,16 +237,18 @@
 %	PUBLICATIONS
 %----------------------------------------------------------------------------------------
 
-\publications{
-	%------------------------------------------------
-	\begin{supertabular}{rl} % Start a table with two columns, the table will ensure everything is aligned
+% \publications{
+% 	%------------------------------------------------
+% 	\begin{supertabular}{rl} % Start a table with two columns, the table will ensure everything is aligned
 
-		%------------------------------------------------
-		\tableentry{\LARGE\faMortarBoard}{ {\href{https://scholar.google.com/citations?user=2UAU3bMAAAAJ&hl=en&oi=sra}{Google Scholar Profile}} }{}
-		%------------------------------------------------
+% 		%------------------------------------------------
+% 		\tableentry{\LARGE\faMortarBoard}{ {\href{https://scholar.google.com/citations?user=2UAU3bMAAAAJ&hl=en&oi=sra}{Google Scholar Profile}} }{}
+% 		%------------------------------------------------
 		
-	\end{supertabular}
-}
+% 	\end{supertabular}
+% }
+
+\publications{}
 
 %----------------------------------------------------------------------------------------
 
@@ -376,7 +387,7 @@ $\bullet$ Technology transfer at GKN aerospace to help \textbf{shorten product l
 
 		%------------------------------------------------
 		\tableentry{\faCode}{\textsc{Software and HPC}}{spaceafter}
-		\tableentry{C++}{\skilllevel{OOP}{5}}{}
+		\tableentry{C++}{\skilllevel{OOP}{4}}{}
 		\tableentry{}{\skilllevel{User interface}{3}}{}
 		\tableentry{}{\skilllevel{Parallel processing}{3}}{}
 		\tableentry{}{\skilllevel{GPU computing}{4}}{}
