Add KU visiting research experience

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -111,7 +111,7 @@
 	\tableentrytwo{}{-~~Reliability and uncertainty quantification (Monte-Carlo with importance sampling)}{spaceafter}
 	\tableentrytwo{\textsc{Modeling and}}{-~~Finite element methods (thermomechanical, structural)}{}
 	\tableentrytwo{\textsc{simulation:}}{-~~Agent-based methods}{}
-	\tableentrytwo{}{-~~System dyanmics models}{spaceafter}
+	\tableentrytwo{}{-~~System dynamics models}{spaceafter}
 	\tableentrytwo{\textsc{Optimization:}}{-~~Blackbox and derivative-free optimization (Mesh-adaptive direct search)}{}
 	\tableentrytwo{}{-~~Multidisciplinary optimization (Non-hierarchical analytical target cascading)}{}
 	\tableentrytwo{}{-~~Stochastic blackbox optimization}{spaceafter}
@@ -201,7 +201,7 @@
 
 %------------------------------------------------
 
-\begin{supertabular}{>{\raggedleft\arraybackslash}p{0.17\linewidth}p{0.77\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
+\begin{supertabular}{>{\raggedleft\arraybackslash}p{0.17\linewidth}p{0.79\linewidth}} % Start a table with three columns, the table will ensure everything is aligned
 
 	%------------------------------------------------
 
@@ -228,20 +228,32 @@
 	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexiblity and robustness.}{}
 	\tableentry{$\bullet$}{Developed novel design frameworks for managing uncertain requirements in system and subsystem design through set-based design approaches.}{}
 	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes.}{}
-	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics models.}{}
+	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
 	\tableentry{$\bullet$}{Used machine learning models to subsitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements (Jacobian formulation).}{spaceafter}
 
 	%------------------------------------------------
 
-	\workposition{Jan 2017 -- Jan 2020} % Duration
+	\workposition{June 2017 -- Jan 2020} % Duration
 	{} % FT/PT (full time or part time)
 	{GKN Aerospace Engine Systems} % Employer
 	{Trolh\"{a}ttan, Sweden} % Location
 	{Visiting researcher} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Participated in a technology transfer to translate my research into industrial practice.}{}
-	\tableentry{$\bullet$}{Provided training modules and workshops to GKN engineers on set-based design and optimization (MATLAB and Python).}{}
-	\tableentry{$\bullet$}{Collected information about industrial workflows to guide academic research.}{spaceafter}
+	\tableentry{$\bullet$}{Participated in a technology transfer to translate my research on set-based engineering and optimization into industrial practice by provided training modules and workshops to GKN engineers (MATLAB and Python).}{}
+	\tableentry{$\bullet$}{Surveyed GKN engineers about their experience designing areoengine components for engine system manufacturers (such as Rolls Royce) to create a timeline of expected design updates and changes. This data formed the basis of a case study for my research on design for flexiblity and robustness.}{}
+	\tableentry{$\bullet$}{Set up advanced design automation and exploration tools to be used as part of GKN's workflow (engineering workbench) by integrated parameteric design software (NX Siemens) with simulation software (Abaqus and ANSYS) to evaluate hundreds of concepts for a turbine rear frame.}{spaceafter}
+
+	%------------------------------------------------
+
+	\workposition{Jan 2019,2020} % Duration
+	{} % FT/PT (full time or part time)
+	{Center for Autonomous Robotic Systems, Khalifa University} % Employer
+	{Abu Dhabi, UAE} % Location
+	{Visiting researcher} % Job title
+	{}{}  % Description
+	\tableentry{$\bullet$}{Developed an attitude estimation algorithm based on interial measurement unit (IMU) data for unmanned aerial vehicles (UAVs) (based on Kalman filters and sliding-mode observers).}{}
+	\tableentry{$\bullet$}{Repurposed a DJI Wind 4 UAV for firefighting by redesigning the drone platform to carry an extinguishant payload.}{}
+	\tableentry{$\bullet$}{Co-authored a paper based on the repurposed UAV to be published in a special issue of the Journal of Field Robotics.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -265,8 +277,23 @@
 	\tableentry{$\bullet$}{Developed a wide range of fiber optic sensors that cost a fraction of their electrical counterparts.}{}
 	\tableentry{$\bullet$}{Came up with corrosion monitoring devices and software for oil and gas pipelines with potential to save the industry millions of dollars worth of maintenance costs.}{}
 	\tableentry{$\bullet$}{Established a correlation between corrosion rate in pre-stressed structures and mechanical quantities such as strain (sensing principle).}{}
-	\tableentry{$\bullet$}{Simulated photonic corrosion sensors in MATLAB and Abaqus to aid in sensor design and calibration.}{}
+	\tableentry{$\bullet$}{Simulated photonic corrosion sensors in MATLAB and Abaqus for sensor design and calibration.}{}
 	\tableentry{$\bullet$}{Developed a novel accelerated corrosion testing setup based on electrochemical cells.}{spaceafter}
+
+
+	%------------------------------------------------
+
+	\workposition{May 2014 -- May 2015} % Duration
+	{} % FT/PT (full time or part time)
+	{Khalifa University} % Employer
+	{Abu Dhabi, UAE} % Location
+	{Khalifa university Baja SAE team leader} % Job title
+	{}{}  % Description
+	\tableentry{$\bullet$}{First UAE national team to compete in the Baja SAE competition (Maryland, 2015).}{}
+	\tableentry{$\bullet$}{Guided the assembly team on integrating vehicle subsystems (chassis, suspension, and power train).}{}
+	\tableentry{$\bullet$}{Performed structural optimization on vehicle chassis using MATLAB and ANSYS.}{}
+	\tableentry{$\bullet$}{Provided workshops on finite elemenet anaylsis and computer aided design to team members.}{}
+	\tableentry{$\bullet$}{Prepared assembly and part drawings for the manufacturing team.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -278,7 +305,6 @@
 	{}{}  % Description
 	\tableentry{$\bullet$}{System dynamics and controls course – Conducted lab sessions and held office hours.}{}
 	\tableentry{$\bullet$}{Computer aided design – Conducted computer lab sessions.}{}
-	\tableentry{$\bullet$}{Lead the 1st national team of the United Arab Emirates to ever compete in the international Baja SAE competition (Maryland, 2015).}{}
 	\tableentry{$\bullet$}{Mentored undergraduate students participating in the Abu Dhabi Solar Challenge (building and designing a solar-powered vehicle).}{}
 	\tableentry{$\bullet$}{Co-mentored an undergraduate capstone project.}{spaceafter}
 
@@ -396,7 +422,7 @@
 \textit{funded by Abu Dhabi National Oil Company}}
 
 %------------------------------------------------
-\newpage
+
 \textbf{\large Conference Papers}\medskip \hrule \medskip
 
 \longformpublication{\textbf{K. Al Handawi}, P. Andersson, M. Panarotto, O. Isaksson and M. Kokkolaras (2020). Scalable set-based design optimization and remanufacturing for meeting changing requirements. \textit{in Proceedings of the International Design Engineering Technical Conferences \& Computers and Information in Engineering Conference}, Virtual conference, IDETC2020.}
@@ -409,11 +435,11 @@
 
 %------------------------------------------------
 
-\textbf{\large Poster presentations}\medskip \hrule \medskip
+% \textbf{\large Poster presentations}\medskip \hrule \medskip
 
-\longformpublication{\textbf{K. Al Handawi}, P. Andersson, O. Isaksson and M. Kokkolaras (2019). Scalable set-based design solutions for product remanufacturing. \textit{International Conference on Engineering Design}, Delft, Netherlands, ICED19.}
+% \longformpublication{\textbf{K. Al Handawi}, P. Andersson, O. Isaksson and M. Kokkolaras (2019). Scalable set-based design solutions for product remanufacturing. \textit{International Conference on Engineering Design}, Delft, Netherlands, ICED19.}
 
-\longformpublication{\textbf{K. Al Handawi}, L. Lawand, T. Hitchcox, Y. F. Zhao and M. Kokkolaras (2018). Additive manufacturing optimization and simulation platform for repairing and remanufacturing of aerospace components. \textit{CRIAQ RDV Forum}, Montr\'{e}al, Canada.}
+% \longformpublication{\textbf{K. Al Handawi}, L. Lawand, T. Hitchcox, Y. F. Zhao and M. Kokkolaras (2018). Additive manufacturing optimization and simulation platform for repairing and remanufacturing of aerospace components. \textit{CRIAQ RDV Forum}, Montr\'{e}al, Canada.}
 
 %------------------------------------------------
 
