--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -103,20 +103,18 @@
 
 	%------------------------------------------------
 	
-	\tableentrytwo{\textbf{Research}}{Engineering systems design. Design for changing requirements. Concurrent engineering. Multidisciplinary design optimization. Applied optimization research. }{spaceafter}
+	\tableentrytwo{\textbf{Research}}{Design for changing requirements. Multidisciplinary design optimization. Instrumentation and state estimation.}{spaceafter}
 
 	\tableentrytwo{\textbf{Technical}}{}{}
 	\tableentrytwo{\textsc{Engineering systems}}{-~~Design for flexibility and robustness}{}
-	\tableentrytwo{\textsc{design:}}{-~~Change propagation analysis}{}
 	\tableentrytwo{}{-~~Reliability and uncertainty quantification (Monte-Carlo with importance sampling)}{spaceafter}
-	\tableentrytwo{\textsc{Modeling and}}{-~~Finite element methods (thermomechanical, structural)}{}
+	\tableentrytwo{\textsc{Modeling and}}{-~~Finite element methods (thermomechanical, structural, electromagnetic)}{}
 	\tableentrytwo{\textsc{simulation:}}{-~~Agent-based methods}{}
 	\tableentrytwo{}{-~~System dynamics models}{spaceafter}
 	\tableentrytwo{\textsc{Optimization:}}{-~~Blackbox and derivative-free optimization (Mesh-adaptive direct search)}{}
-	\tableentrytwo{}{-~~Multidisciplinary optimization (Non-hierarchical analytical target cascading)}{}
-	\tableentrytwo{}{-~~Stochastic blackbox optimization}{spaceafter}
-	\tableentrytwo{\textsc{Machine learning:}}{-~~Deep learning, Long-short term memory (LSTM)}{}
-	\tableentrytwo{}{-~~Reinforcement learning (Actor-critic methods)}{}
+	\tableentrytwo{}{-~~Stochastic optimization}{spaceafter}
+	\tableentrytwo{\textsc{Machine learning:}}{-~~Deep learning (Recurrent neural networks)}{}
+	\tableentrytwo{}{-~~Reinforcement learning (Q-learning)}{}
 	\tableentrytwo{}{-~~Hyperparameter optimization}{spaceafter}
 
 	\tableentrytwo{\textbf{Software}}{MATLAB and Simulink, Python (PyTorch, matplotlib), C++ (CUDA, OpenMP, Qt)}{}
@@ -213,7 +211,6 @@
 	{}{} % Description
 	\tableentry{$\bullet$}{Built a stochastic COVID model for predicting the spread of the disease in a population using agent-based approaches and used reinforcement learning algorithms to optimize public health policies.}{}
 	\tableentry{$\bullet$}{Applied stochastic optimization to hyperparameter optimization problems in machine learning.}{}
-	\tableentry{$\bullet$}{Advanced the field of stochastic blackbox optimization by co-developing the stochastic version of the mesh-adaptive direct search algorithm.}{}
 	\tableentry{$\bullet$}{Lectured the engineering systems optimization class and developed MATLAB training modules and projects related to multidisciplinary optimization with applications to aircraft design.}{spaceafter}
 
 	%------------------------------------------------
@@ -225,8 +222,7 @@
 	{Research assistant} % Job title
 	{}{}  % Description
 	\tableentry{$\bullet$}{Won a Fonds de Recherche du Qu\'{e}bec Nature et Technologie (FRQNT) grant (56,000 CAD).}{}
-	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexiblity and robustness.}{}
-	\tableentry{$\bullet$}{Developed novel design frameworks for managing uncertain requirements in system and subsystem design through set-based design approaches.}{}
+	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexiblity and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
 	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes.}{}
 	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
 	\tableentry{$\bullet$}{Used machine learning models to subsitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements (Jacobian formulation).}{spaceafter}
@@ -239,8 +235,8 @@
 	{Trolh\"{a}ttan, Sweden} % Location
 	{Visiting researcher} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Participated in a technology transfer to translate my research on set-based engineering and optimization into industrial practice by provided training modules and workshops to GKN engineers (MATLAB and Python).}{}
-	\tableentry{$\bullet$}{Surveyed GKN engineers about their experience designing areoengine components for engine system manufacturers (such as Rolls Royce) to create a timeline of expected design updates and changes. This data formed the basis of a case study for my research on design for flexiblity and robustness.}{}
+	\tableentry{$\bullet$}{Participated in a technology transfer to translate my research on optimization into industrial practice by provided training modules and workshops to GKN engineers (MATLAB and Python).}{}
+	\tableentry{$\bullet$}{Surveyed GKN engineers about their experience designing areoengine components for engine system manufacturers to create a timeline of expected design updates and changes. This data formed the basis of a case study for my research on design for flexiblity and robustness.}{}
 	\tableentry{$\bullet$}{Set up advanced design automation and exploration tools to be used as part of GKN's workflow (engineering workbench) by integrated parameteric design software (NX Siemens) with simulation software (Abaqus and ANSYS) to evaluate hundreds of concepts for a turbine rear frame.}{spaceafter}
 
 	%------------------------------------------------
@@ -251,9 +247,40 @@
 	{Abu Dhabi, UAE} % Location
 	{Visiting researcher} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Developed an attitude estimation algorithm based on interial measurement unit (IMU) data for unmanned aerial vehicles (UAVs) (based on Kalman filters and sliding-mode observers).}{}
+	\tableentry{$\bullet$}{Performed sensor fusion research with applications to unmanned aerial vehicle (UAV) control and manuevering.}{}
+	\tableentry{$\bullet$}{Fused UAV interial measurement unit (IMU) data with high latency positioning measurements from an Optitrack motion capture system to obtain smooth high frequency attitude estimates suitable for control applications.}{}
+	\tableentry{$\bullet$}{Used the principles of quaternion transformation to translate observed attitude in the IMU reference frame to an interial reference frame.}{}
 	\tableentry{$\bullet$}{Repurposed a DJI Wind 4 UAV for firefighting by redesigning the drone platform to carry an extinguishant payload.}{}
 	\tableentry{$\bullet$}{Co-authored a paper based on the repurposed UAV to be published in a special issue of the Journal of Field Robotics.}{spaceafter}
+
+	%------------------------------------------------
+
+	\workposition{Aug 2013 -- Dec 2016} % Duration
+	{} % FT/PT (full time or part time)
+	{Asset Integrity Management Systems Lab, Khalifa University} % Employer
+	{Abu Dhabi, UAE} % Location
+	{Research Assistant} % Job title
+	{}{}  % Description
+	\tableentry{$\bullet$}{Developed fiber optic sensors for monitoring mechanical and electrochemical phenomena such as strain, temperature, and corrosion.}{}
+	\tableentry{$\bullet$}{Used optical time-domain reflectometery for distributed fiber optic sensing of large structures such as oil pipelines.}{}
+	\tableentry{$\bullet$}{Worked with fiber Bragg grating sensors for localized measurements of strain and temperature and their subsequent translation into corrosion rate.}{}
+	\tableentry{$\bullet$}{Established a correlation between photoelastic properties of various waveguides (distrubuted and localized sensors) and the corrosion rate in oil and gas structures.}{}
+	\tableentry{$\bullet$}{Simulated photonic corrosion sensors in MATLAB and Abaqus for sensor design and calibration.}{}
+	\tableentry{$\bullet$}{Developed a novel accelerated corrosion testing setup based on electrochemical cells for validating and verifiying the proposed corrosion sensors and establishing the calibration curve.}{spaceafter}
+
+	%------------------------------------------------
+
+	\workposition{May 2014 -- May 2015} % Duration
+	{} % FT/PT (full time or part time)
+	{Khalifa University} % Employer
+	{Abu Dhabi, UAE} % Location
+	{Khalifa university Baja SAE team leader} % Job title
+	{}{}  % Description
+	\tableentry{$\bullet$}{Lead the first UAE national team to compete in the Baja SAE competition (Maryland, 2015).}{}
+	\tableentry{$\bullet$}{Guided the assembly team on integrating vehicle subsystems (chassis, suspension, and power train).}{}
+	\tableentry{$\bullet$}{Performed structural optimization on vehicle chassis using MATLAB and ANSYS.}{}
+	\tableentry{$\bullet$}{Provided workshops on finite elemenet anaylsis and computer aided design to team members.}{}
+	\tableentry{$\bullet$}{Prepared assembly and part drawings for the manufacturing team.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -265,35 +292,6 @@
 	{}{}  % Description
 	\tableentry{$\bullet$}{Mechanical lab course – Prepared lab manuals, conducted labs, graded student reports, and incorporated MATLAB programming exercises into the syllabus.}{}
 	\tableentry{$\bullet$}{Engineering Professional Practice course – Conducted town halls, hosted guest lecturers, provided feedback to students, and gave several talks about entrepreneurship.}{spaceafter}
-
-	%------------------------------------------------
-
-	\workposition{Aug 2013 -- Dec 2016} % Duration
-	{} % FT/PT (full time or part time)
-	{Asset Integrity Management Systems Lab, Khalifa University} % Employer
-	{Abu Dhabi, UAE} % Location
-	{Research Assistant} % Job title
-	{}{}  % Description
-	\tableentry{$\bullet$}{Developed a wide range of fiber optic sensors that cost a fraction of their electrical counterparts.}{}
-	\tableentry{$\bullet$}{Came up with corrosion monitoring devices and software for oil and gas pipelines with potential to save the industry millions of dollars worth of maintenance costs.}{}
-	\tableentry{$\bullet$}{Established a correlation between corrosion rate in pre-stressed structures and mechanical quantities such as strain (sensing principle).}{}
-	\tableentry{$\bullet$}{Simulated photonic corrosion sensors in MATLAB and Abaqus for sensor design and calibration.}{}
-	\tableentry{$\bullet$}{Developed a novel accelerated corrosion testing setup based on electrochemical cells.}{spaceafter}
-
-
-	%------------------------------------------------
-
-	\workposition{May 2014 -- May 2015} % Duration
-	{} % FT/PT (full time or part time)
-	{Khalifa University} % Employer
-	{Abu Dhabi, UAE} % Location
-	{Khalifa university Baja SAE team leader} % Job title
-	{}{}  % Description
-	\tableentry{$\bullet$}{First UAE national team to compete in the Baja SAE competition (Maryland, 2015).}{}
-	\tableentry{$\bullet$}{Guided the assembly team on integrating vehicle subsystems (chassis, suspension, and power train).}{}
-	\tableentry{$\bullet$}{Performed structural optimization on vehicle chassis using MATLAB and ANSYS.}{}
-	\tableentry{$\bullet$}{Provided workshops on finite elemenet anaylsis and computer aided design to team members.}{}
-	\tableentry{$\bullet$}{Prepared assembly and part drawings for the manufacturing team.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -399,12 +397,12 @@
 \longformpublication{\textbf{K. Al Handawi} and M. Kokkolaras (2021). Optimization of infectious disease prevention and control policies using agent-based modeling. \textit{IEEE Transactions on Emerging Topics in Computational Intelligence}, \href{https://www.gerad.ca/en/papers/G-2021-07}{https://www.gerad.ca/en/papers/G-2021-07}, (\textit{Under Review})\\
 \textit{funded by an NSERC discovery grant}}
 
-\longformpublication{\textbf{K. Al Handawi}, M. Panarotto, P. Andersson, O. Isaksson and M. Kokkolaras (2021). Optimization of design margins allocation when making use of additive remanufacturing. \textit{Journal of Mechanical Design}, (\textit{Under Review})\\
-\textit{funded partially by NSERC, FRQNT, CARIC and EU Horizon 2020 research and innovation programme}}
-
 %------------------------------------------------
 
 \textbf{\large Refereed Journal Articles}\medskip \hrule \medskip
+
+\longformpublication{\textbf{K. Al Handawi}, M. Panarotto, P. Andersson, O. Isaksson and M. Kokkolaras (2021). Optimization of design margins allocation when making use of additive remanufacturing. \textit{Journal of Mechanical Design}, (\textit{In Press})\\
+\textit{funded partially by NSERC, FRQNT, CARIC and EU Horizon 2020 research and innovation programme}}
 
 \longformpublication{M. Chehadeh, M. Wahbah, M. Awad, O. AbdulHay, \textbf{K. Al Handawi}, L. Seneviratne, I. Greatbatch and Y. Zweiri (2021). Novel aerial firefighting system for suppression of incipient cladding fires. \textit{Journal of Field Robotics}, (\textit{In Press})\\
 \textit{funded by Emaar Properties PJSC}}
